# Kronos

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  Dockerfile  MEMORY.md  README.en.md  README.md  TODO.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytz.py
cli/: main.py
configs/: backtest.toml  dev.toml
docs/: ACCEPTANCE_20260504_AGENT_MVP_PRODUCT_REVIEW.md  AGENT_ARCHITECTURE_TECH_SELECTION.md  AGENT_MVP_ACCEPTANCE.md  AGENT_MVP_ASSET_INVENTORY.md  AGENT_MVP_DELIVERY.md  AGENT_MVP_DEVELOPMENT_PLAN.md  AGENT_MVP_EXECUTION_PLAN.md  AGENT_MVP_PRODUCT_UX_REVIEW.md  AGENT_MVP_PRODUCT_WALKTHROUGH_AUDIT_20260501.md  AGENT_MVP_TECH_SELECTION_REVIEW.md  ARCHIVE_INDEX.md  BACKTEST_ENGINE_ACCEPTANCE.md  BINANCE_CONNECTOR_MIGRATION.md  CODE_REVIEW_20260504.md  DEVELOPMENT_PLAN.md  DOCKER_PERSONA_UX_EVALUATION_20260506.md  DOCKER_PERSONA_UX_EVALUATION_20260507.md  DOCKER_PERSONA_UX_EVALUATION_20260508.md  DOCKER_UX_EVALUATION_20260505.md  EXPERIMENT_MANAGEMENT_ACCEPTANCE.md  EXTERNAL_TRADER_ONBOARDING_REVIEW_20260505.md  FACTOR_FAMILIES_ACCEPTANCE.md  FRESH_DOCKER_EVAL_v031_20260505.md  IMPLEMENTATION_GAP_ANALYSIS.md  IMPLEMENTATION_STATUS.md  KNOWLEDGE_BASE_ACCEPTANCE.md  KRONOS_V0410_PERSONA_ACCEPTANCE_20260511.md  KRONOS_V049_PERSONA_ACCEPTANCE_20260511.md  MODULE_PLAN_INDEX.md  MVP_ACCEPTANCE.md  NOTIFICATION_SYSTEM_ACCEPTANCE.md  NOVICE_DOCKER_UX_LOG_20260505.md  ONBOARDING_FIX_PLAN.md  ONBOARDING_UX_REVIEW.md  OPEN_SOURCE_INFLUENCE_MAP.md  PORTFOLIO_CONSTRUCTION_ACCEPTANCE.md  PRODUCT_CONTROL_PANEL.md  PRODUCT_DESIGN_REVIEW_20260505.md  PRODUCT_DESIGN_STRATEGY_SYSTEM.md  (+16 more)
(+271 files in other folders)
