[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kronos"
version = "0.4.10"
description = "Crypto-native quantitative research and trading system"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "duckdb>=1.0",
    "numpy>=2.0",
    "pyarrow>=15.0",
    "pandas>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "structlog>=24.0",
    "typer>=0.12",
    "httpx[socks]>=0.27",
    "tomli-w>=1.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]

[project.scripts]
kronos = "cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.0",
    "alphalens-reloaded>=0.4",
    "pandas-stubs>=3.0.0.260204",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["kronos", "cli", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["kronos"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["duckdb.*", "alphalens.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: end-to-end tests (deselect with '-m \"not e2e\"')"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["kronos"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
